--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.11,<3.12"
 lingua-py = "^0.1.1"
 lxml = "^5.2.1"
+pytest = "^8.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
